
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ mach_port_t ;
typedef scalar_t__ kern_return_t ;
typedef scalar_t__ io_connect_t ;


 int IOObjectRelease (scalar_t__) ;
 scalar_t__ IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 scalar_t__ IOServiceOpen (scalar_t__,scalar_t__,int ,scalar_t__*) ;
 scalar_t__ KERN_SUCCESS ;
 scalar_t__ MACH_PORT_NULL ;
 int kIOMasterPortDefault ;
 char* mach_error_string (scalar_t__) ;
 int printf (char*,...) ;

io_connect_t get_connection(mach_port_t task_port) {
  kern_return_t err;
  mach_port_t service = IOServiceGetMatchingService(kIOMasterPortDefault, IOServiceMatching("IOBluetoothHCIController"));

  if (service == MACH_PORT_NULL) {
    printf("unable to get service\n");
    return MACH_PORT_NULL;
  }

  io_connect_t conn = MACH_PORT_NULL;

  err = IOServiceOpen(service, task_port, 0, &conn);
  if (err != KERN_SUCCESS){
    printf("IOServiceOpen failed: %s\n", mach_error_string(err));
    conn = MACH_PORT_NULL;
  }
  IOObjectRelease(service);

  return conn;
}
